[workspace]

[package]
name = "mcp-scheduling"
version = "1.2.0"
edition = "2024"
description = "Scheduling MCP server — appointments, shifts, resource booking, availability, recurring events, conflict detection, timezone-aware"
license = "Apache-2.0"
repository = "https://github.com/zavora-ai/mcp-scheduling"
keywords = ["mcp", "scheduling", "appointments", "booking", "shifts"]
categories = ["api-bindings"]

[dependencies]
adk-mcp-sdk = "0.1"
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
